--- a/programming2.html
+++ b/programming2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h2>Programming with Processing</h2>
-  <p>This is my sketch created using the Processing programming language.</p>
+  <p>This is the sketch I created using the Processing programming language.</p>
 <script type="application/processing">
 
 void setup() {
